# gdbtools

./: .gitignore  .~CLOUDGoldenDB分布式数据库通用rest接口操作指南.doc  CLAUDE.md  README.md  ZXCLOUDGoldenDB分布式数据库通用rest接口操作指南.txt  dd.csv  gdb主机纳管接口.txt  go.mod  go.sum  migrate_readme.txt  mysqlcompare_readme.txt  pyproject.toml  readme.txt  xx.xlsx  新增CN组件  新增DN组件  新增用户及权限  新增租户.txt  服务器纳管json的接口  鉴权说明.txt
cmd/db-auth-lookup/: main.go
cmd/insight-batch-add-cn/: main.go
cmd/insight-batch-add-dn/: main.go
cmd/insight-batch-create/: main.go
cmd/insight-batch-onboard-hosts/: main.go
cmd/insight-create-dbmgr/: main.go
cmd/mysql-rename-db/: main.go
docs/: db_auth_lookup_design.md  db_auth_lookup_usage.md  goldendb_client_usage.md  goldendb_tool_interface_set.md  goldendb_tool_interface_set.yaml  insight_batch_add_cn.md  insight_batch_add_dn.md  insight_batch_create.md  insight_batch_create_design.md  insight_batch_onboard_hosts.md  insight_batch_onboard_hosts_design.md  insight_create_dbmgr.md  insight_quickstart.md  insight_tools_overview.md  mysql_rename_db_usage.md  mysqlcompare_usage.md  mysqlpricheck_design.md  mysqlpricheck_usage.md
sample_excels/: .~数据库和集群映射表.xlsx  应用和ip映射表.csv  应用和ip映射表.xlsx  数据库和集群映射表.csv  数据库和集群映射表.xlsx  数据库集群映射表.csv  数据库集群映射表.xlsx  访问关系表.csv  访问关系表.xlsx
scripts/: batch_create_from_csv.md  batch_create_from_csv.py  create_dbmgr.py  generate_db_auth_lookup_samples.go  mysql_migrate.sh  mysql_privilege_compare.py  mysql_schema_compare.py
tests/: test_cli.py  test_config.py  test_mapping.py  test_privileges.py  test_script_entry.py
(+71 files in other folders)
